<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llhContact1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llhProfileContact1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivContact1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/contact_1_profile_photo"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tvNameContact1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tvDefault"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llhDetailsContact1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llhPhoneContact1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                tools:ignore="TouchTargetSizeCheck">

                <ImageView
                    android:id="@+id/ivPhone"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:contentDescription="@string/phone"
                    app:srcCompat="@drawable/phone"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tvPhoneContact1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/tvDefault"
                    tools:ignore="RtlSymmetry,TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llhWebsiteContact1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                tools:ignore="TouchTargetSizeCheck">

                <ImageView
                    android:id="@+id/ivWeb"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:contentDescription="@string/Website"
                    app:srcCompat="@drawable/web"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tvWebsiteContact1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/tvDefault"
                    tools:ignore="RtlSymmetry,TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llhLocationContact1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                tools:ignore="TouchTargetSizeCheck">

                <ImageView
                    android:id="@+id/ivLocation"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:contentDescription="@string/ivLocation"
                    app:srcCompat="@drawable/location" />

                <TextView
                    android:id="@+id/tvLocationContact1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/tvDefault"
                    tools:ignore="RtlSymmetry,TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCreateContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="0"
        android:text="@string/btn_new_contact"
        tools:ignore="TextContrastCheck" />

</LinearLayout>